--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="footer-area">
         <a href="http://example.com">
         <div class="download-button" id="mobile-download" data-lang-en="Download" data-lang-ar="">
-          تسجيل
+          تسجيل الدخول
         </div>
       </a>
       <a href="https://play.google.com/store/apps/details?id=com.gmlive.vins">
