--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <img class="azizi-icon" src="./img.vins.live/MTU5MjU1OTc2MzQ5NSMxOTIjcG5n.png" alt="icon" />
         </div>
         <div class="right-block">
-          <a href="http://example.com">
+          <a href="./login/login.html">
           <div class="recharge-button" data-lang-en="login" data-lang-ar="تسجيل الدخول">
             تسجيل الدخول
           </div>
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="footer-area">
-        <a href="http://example.com">
+        <a href="./login/login.html">
         <div class="download-button" id="mobile-download" data-lang-en="Download" data-lang-ar="">
           تسجيل الدخول
         </div>
