--- a/login/login.html
+++ b/login/login.html
@@ -19,6 +19,7 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
   border-radius: 10px;
   background-color : #242424;
+  color: #fff;
 }
 
 
